# typewriter

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: args.rs  cleanpath.rs  command.rs  config.rs  default.toml  file.rs  git.rs  log.rs  main.rs  parse_config.rs  vars.rs
src/apply/: checkdiff.rs  fileperm.rs  hooks.rs  mod.rs  strategy.rs  tempcopy.rs  variables.rs
src/commands/: apply.rs  init.rs  mod.rs
