[package]
name = "typewriter"
version = "1.0.0"
edition = "2024"
authors = ["stellaurora <jeancharlduplessis@gmail.com>"]
description = "A file-based minimal configuration management program"

[dependencies]
# Deserialisation support for TOML files
serde = { version = "1.0", features = ["derive"] }

# TOML files are what is used to configure typewriter setups
toml = { version = "0.9", features = ["serde", "parse"] }

# Argument parsing helper library
clap = { version = "4.5", features = ["derive", "wrap_help"] }

# Easy command input handling
inquire = "0.9.1"

# Easy error handling/Logging
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Absolute path-ing without canonicalise
path-absolutize = { version = "3.1.1", features = ["once_cell_cache"] }

# Hashing for file-diff
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }

# Pretty println!
ansi_term = "0.12"

# RON for metadata serialization/deserialization and storage.
ron = "0.11.0"

# Regex for variable matching
regex = "1"

